# todo-rs

./: Cargo.toml  LICENSE  README.md
src/: actions.rs  cli.rs  main.rs  project.rs  todo.rs  todo_parser.rs
src/api/: gitea.rs  github.rs  mod.rs
src/config/: mod.rs  raw.rs
