[package]
authors = ["Roman Kolesnikov <rk2001.mailbox@gmail.com>"]
edition = "2018"
name = "todo"
version = "0.1.0"

[dependencies]
async-trait = "0.1.42"
clap = "2.33.3"
dirs = "3.0"
futures = "0.3"
octocrab = "0.8"
regex = "1"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
subprocess = "0.2.6"
thiserror = "1.0"
tokio = {version = "1", default-features = false, features = ["macros", "rt-multi-thread"]}
